Changelog
=========

3.0 (unreleased)
================

- Fix redirect after exception message in prenotazioni_move [nicolasenno]
- Fix check conflicts on prenotazione_move [nicolasenno]
- Added legend to prenotazione_folder [nicolasenno]
- Fix redirect in prenotazioni_move [nicolasenno]
- Fix some i18n translations [nicolasenno] 
- Added search pagination [nicolasenno]
- Added upgrade step for "tipologia" field in prenotazioni_folder [nicolasenno]
- Added upgrade step for "settimana_tipo" in prenotazioni_folder [nicolasenno]
- Modified settimana_tipo colunms in prenotazioni_folder [nicolasenno]
- Added expiration field to IPrenotazione content type and created
  the upgrade step for its value [nicolasenno]
- Adding a portal types PrenotazioniWeek, PrenotazioniYear, PrenotazioniDay
- Added the concept of slots
- Adding a new week view
- Depends non pyinter
  [alert]


2.1 (2013-09-12)
================
- Fix cancel action on new booking [nicolasenno]
- Fix booking visualization issue on PM time [nicolasenno]
- Fix check booking not available [nicolasenno]
- Fix slot visualization for both anonymous and logged [nicolasenno]
- View for booking vacations supports also gateless bookings [alert]
- Implemented view for booking vacations [alert]
- Slot calculation made in prenotazioni state view [alert]
- Added parameter force_gate in booking creation [alert]
- Added utility time2timedelta [alert]
- Fix CSS table prenotazioni [nicolasenno]
- Hide refused review_state slots for anonymous users [alert]
- Fix review_state refused permissions [alert]
- Correctly take into account futureDays parameter [alert]
- Temporarily enabled actions menu [nicolasenno]
- Don't check overbooking in Prenotazione post_validate [alert]
- Fix the review_state after copy [alert]
- Added new workflow transition and its upgrade step [nicolasenno]
- Added fields validation (email, phone) for prenotazioni form [nicolasenno]
- Modified contentrules [nicolasenno]