@@ -4,6 +4,7 @@ Changelog
 3.0 (unreleased)
 ================
 
+- Fix unicode issue in  upgrade_tipologia [alert]
 - Fix redirect after exception message in prenotazioni_move [nicolasenno]
 - Fix check conflicts on prenotazione_move [nicolasenno]
 - Added legend to prenotazione_folder [nicolasenno]
